# elfant

./: .deploy-hash  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  import_league.py  issue_projection_model.md  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: d2e331360665_initial.py
elfant/: README.md  cli.py  config.py  scoring.py  web.py
elfant/api/: sleeper.py
elfant/db/: base.py  models.py
elfant/sync/: sync.py
elfant/templates/: index.html  layout.html  league.html  matchups.html
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: DefRankings.tsx  DraftGrid.tsx  DraftPicks.tsx  EfficiencyBarChart.tsx  LeagueTimeline.tsx  Matchups.tsx  PlayerHeatGrid.tsx  PlayerLineChart.tsx  PlayerSearch.tsx  PlayoffBracket.tsx  PointsDiffChart.tsx  PowerRankings.tsx  RangeBarChart.tsx  RankingsChart.tsx  ScatterPlots.tsx  Standings.tsx  TransactionsTimeline.tsx  UsagePie.tsx  VolatilityChart.tsx  WeeklyBarChart.tsx
frontend/src/components/ui/: breadcrumb.tsx  tooltip.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: Home.tsx  League.tsx  LeagueOverview.tsx  PlayerDetail.tsx
scripts/: db-tunnel.sh  dev-refresh.sh
